fix: fix detailsItem content jump - add absolute pos

--- a/src/components/WeatherDetails/DetailsItem/DetailsItem.module.scss
+++ b/src/components/WeatherDetails/DetailsItem/DetailsItem.module.scss
@@ -1,8 +1,10 @@
 @import "../../../variables";
 
 .detailsItem {
+  position: relative;
   flex-basis: calc((100% / 4) - 30px);
   margin-left: 30px;
+  min-height: 60px;
 
   @media (max-width: 1200px) {
     flex-basis: calc((100% / 2) - 30px);
@@ -22,6 +24,7 @@
   }
 
   &__desc {
+    position: absolute;
     font-size: 25px;
     color: $accentColor;
 
